examples/working/errors/expl2.slk

data cell {
 int val;
}.

checkentail x::cell<2> |- x::cell<b>.
print residue.

checkentail x::cell<3> |- [bb] x::cell<bb>.
print residue.


//checkentail x::cell<2> |- (exists b:  x::cell<b>).
//print residue.

